Кое как прикрутил морду от cloud_reader_writer.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">cloud_writer_2</string>
+    <string name="do_not_overwrite">Не перезаписывать</string>
+    <string name="overwrite">Перезаписать</string>
+    <string name="login_to_yandex">Авторизоваться в Яндекс</string>
+    <string name="logout_from_yandex">Выйти из Яндекса</string>
+    <string name="question">\?</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="from_storage">Из:</string>
+    <string name="to_storage">В:</string>
+    <string name="type_name_yandex_disk">Яндекс.Диск</string>
+    <string name="type_name_local">Локальный</string>
 </resources>
