--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="login_type_chrome_native">Через приложение</string>
     <string name="login_type_chrome_web_view">Web View</string>
     <string name="login_type_chrome_tab">Вкладка Chrome (плохой)</string>
+    <string name="clear_auth">Удалить авторизацию</string>
 </resources>
