--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="uploading_file_button">Загрузка файла на сервер</string>
     <string name="selection_result">Выбрано: %1$s</string>
     <string name="there_is_no_reading_access">Запрещено читать хранилище</string>
+    <string name="no_file_selected">Не выбран файл</string>
 </resources>
